--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ addons:
 language: java
 jdk:
   - oraclejdk8
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 script:
   - "mvn -Pphantomjs"
   - "mvn -Pfirefox"
