--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,13 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <selenium.hub.url>http://local.example.com:4444/wd/hub</selenium.hub.url>
+        <browser>firefox</browser>
         <holdBrowserOpen>false</holdBrowserOpen>
-        <surefire.argLine>-Dbrowser=${browser} -Dselenide.holdBrowserOpen=${holdBrowserOpen}</surefire.argLine>
+        <webdriver.gecko.driver>${user.home}/bin/geckodriver</webdriver.gecko.driver>
+        <webdriver.chrome.driver>${user.home}/bin/chromedriver</webdriver.chrome.driver>
+        <surefire.argLine></surefire.argLine>
+        <selenium.version>3.0.1</selenium.version>
+        <selenide.version>4.0</selenide.version>
     </properties>
 
     <prerequisites>
@@ -50,6 +55,19 @@
             </properties>
         </profile>
         <profile>
+            <id>safari</id>
+            <properties>
+                <browser>safari</browser>
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.seleniumhq.selenium</groupId>
+                    <artifactId>selenium-safari-driver</artifactId>
+                    <version>${selenium.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
             <id>htmlunit</id>
             <properties>
                 <browser>htmlunit</browser>
@@ -66,7 +84,7 @@
         <profile>
             <id>ci-server</id>
             <properties>
-                <surefire.argLine>-Dremote=${selenium.hub.url} -Dbrowser=${browser}</surefire.argLine>
+                <surefire.argLine>-Dremote=${selenium.hub.url}</surefire.argLine>
             </properties>
         </profile>
         <profile>
@@ -83,8 +101,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
                 <configuration>
+                    <detail>true</detail>
+                    <forkCount>1C</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <systemPropertyVariables>
+                        <browser>${browser}</browser>
+                        <holdBrowserOpen>${holdBrowserOpen}</holdBrowserOpen>
+                        <webdriver.chrome.driver>${webdriver.chrome.driver}</webdriver.chrome.driver>
+                        <webdriver.gecko.driver>${webdriver.gecko.driver}</webdriver.gecko.driver>
+                    </systemPropertyVariables>
                     <argLine>${surefire.argLine}</argLine>
                 </configuration>
             </plugin>
@@ -94,6 +120,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.19.1</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -108,7 +135,7 @@
         <dependency>
             <groupId>com.codeborne</groupId>
             <artifactId>selenide</artifactId>
-            <version>3.5.1</version>
+            <version>${selenide.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -116,4 +143,14 @@
             <version>4.12</version>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>${selenium.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
